Develop (#17)
* Revert HTF simulation strategy

* implement alternative gc stress tests (#15)

Co-authored-by: Luqman Saeed <luqman.saeed@payara.fish>

* Fix C4 name identification

* Use bundled eclipse formatter with spotless

* copy spotless config file. Update presentation

* Amend reame

---------

Co-authored-by: Luqman Saeed <luqman.saeed@payara.fish>